tests/models/enum/named/f64/pass/le.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(le = 2.0)]
        value: f64
    },
}
fn main() {}
