tests/models/enum/named/f64/fail/gt.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(gt = 2)]
        value: f64
    },
}
fn main() {}
